test/sematic/resources/positive/basic_fundec5.tig
let
    function func() = let
        var a := 5
    in
        (((((((print("hi"))))))))
    end
in
    func()
end
