test/sematic/resources/negative/false_fundec4.tig
let
    function func() = "Hello, World!"
in
    func()
end
